Validate stream HTTP redirects